# GomalizingFlow.jl

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  Makefile  Project.toml  README.md  begin_training.jl  docker-compose.yml  jupytext.toml  main.jl  pyproject.toml  run_batch_training.jl  watch.jl
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml
cfgs/: example2d.toml  example2d_E1.toml  example2d_E2.toml  example2d_E3.toml  example2d_E4.toml  example2d_E5.toml  example2d_critical_L4.toml  example2d_critical_L8.toml  example2d_potential_prior.toml  example2d_prior_potential.toml  example3d.toml  example3d_E1.toml  example3d_E2.toml  example3d_E3.toml  example3d_E4.toml  example3d_E5.toml  example3d_broken.toml  example3d_broken_prior_potential.toml  example3d_broken_prior_potential_lr_low.toml  example3d_critical.toml  example3d_critical_L4.toml  example3d_critical_L8.toml  example3d_critical_prior_potential.toml  example3d_symmetric.toml  example3d_symmetric_prior_potential.toml  example4d.toml  example4d_critical_L4.toml  example4d_critical_L8.toml
docker/: Dockerfile.m1
playground/notebook/: lft.md
playground/pluto/: rejection_sampling.jl  rrule_action.jl  study_potential.jl
src/: GomalizingFlow.jl  LFT.jl  PotentialDistributions.jl  Watcher.jl  actions.jl  autocorr.jl  greenfunction.jl  layers.jl  mcmc.jl  metrics.jl  models.jl  parameters.jl  train2D.jl  train3D.jl  training.jl  utils.jl
test/: actions.jl  potential.jl  pyinterface.jl  runtests.jl
test/assets/: action.py  config.toml  example2d.toml  history.bson  torchlayer.py  (+1 more)
(+60 files in other folders)
