[tool.poetry]
name = "pylft"
version = "0.1.0"
description = "LFT"
authors = ["SatoshiTerasaki <s.terasaki@atelier-arith.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"

[tool.poetry.dev-dependencies]
numpy = "^1.20.3"
matplotlib = "^3.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
